--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,15 @@
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library -->
+<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-library</artifactId>
+    <version>1.3</version>
+    <scope>test</scope>
+</dependency>
+
 
 		<dependency>
 			<groupId>io.cucumber</groupId>
@@ -51,6 +60,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
+	<!-- FIXME change it to the project's website 	<!-version>3.141.59</!-version -->
 			<version>3.141.59</version>
 		</dependency>
 
