--- a/pom.xml
+++ b/pom.xml
@@ -61,14 +61,14 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 	<!-- FIXME change it to the project's website 	<!-version>3.141.59</!-version -->
-			<version>3.141.59</version>
+			<version>4.11.0</version>
 		</dependency>
 
-		<dependency>
+<!--		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
 			<version>4.2.2</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
