--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,12 @@
 			<version>4.11.0</version>
 		</dependency>
 
-<!--		<dependency>
+		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
 			<version>4.2.2</version>
-		</dependency> -->
-
-		<dependency>
+		</dependency> 
+				<dependency>
 			<groupId>tech.grasshopper</groupId>
 			<artifactId>extentreports-cucumber6-adapter</artifactId>
 			<version>2.8.0</version>
